# claude-code-remote

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  hook-config.example.json  install.sh  pyproject.toml  run_bot.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
archives/: requirements.txt  run_bot.sh
archives/claude_code_telegram/: always_allow.py  bot.py  cli.py  config.py  hook_handler.py  stop_handler.py
archives/tests/: test_always_allow.py  test_stop_handler.py
claude_code_telegram/: __init__.py  always_allow.py  config.py
scripts/: build_scie.sh
src/: always_allow.rs  bot.rs  cli.rs  config.rs  error.rs  hook_handler.rs  lib.rs  main.rs  notification_handler.rs  stop_handler.rs  telegram.rs
src/messenger/: discord.rs  mod.rs  signal.rs  telegram.rs  types.rs
tests/: __init__.py  test_config.py  test_hook_handler.py
