[package]
name = "claude-code-telegram"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Claude Code hook & Telegram Bot integration"
license = "MIT"

[[bin]]
name = "claude-code-telegram"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Signal support (optional, AGPL-3.0 licensed)
presage = { git = "https://github.com/whisperfish/presage", optional = true }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", optional = true }
qrcode = { version = "0.14", optional = true }
futures-util = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

# Discord support (optional, MIT/Apache 2.0 licensed)
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

[features]
default = []
signal = ["dep:presage", "dep:presage-store-sqlite", "dep:qrcode", "dep:futures-util", "dep:futures-channel"]
discord = ["dep:serenity"]

[patch.crates-io]
# Required by presage for Signal protocol
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
